# Desktop

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  EPD_Font.h  Pic.h  app_config.h  app_getweather.c  app_getweather.h  deep_sleep.c  deep_sleep.h  device_config.c  device_config.h  e_paper.c  e_paper.h  idf_component.yml  main.c  my_button.c  my_button.h  my_http_server.c  my_http_server.h  my_sht30.c  my_sht30.h  my_wifi.c  my_wifi.h  system_time.c  system_time.h  wifi_config.html
